# Codecrafters-Interpreter

./: Cargo.toml  README.md  test.lox
src/: ast.rs  environment.rs  expression.rs  interpret.rs  lib.rs  main.rs  parse.rs  scan.rs  statement.rs  test.rs  token.rs
