[package]
name = "codecrafters-interpreter"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                     # error handling
bytes = "1.3.0"                                       # helps manage buffers
once_cell = "1.20.2"
regex = "1.11.0"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
thiserror = "1.0.38"                                  # error handling
unicode-segmentation = "1.12.0"
